# erc8004

./: Cargo.toml  Makefile  README.md  config.toml
.github/workflows/: publish.yml  sync.yml
erc8004/: Cargo.toml
erc8004-events/: Cargo.toml  README.md
erc8004-events/src/: chains.rs  config.rs  cursor.rs  fetcher.rs  lib.rs  main.rs  parquet.rs
erc8004/examples/: multi_network.rs  query_agent.rs  register_agent.rs  registration_file.rs  reputation_summary.rs
erc8004/src/: client.rs  contracts.rs  error.rs  identity.rs  lib.rs  networks.rs  reputation.rs  types.rs  validation.rs
scripts/: count_agents.py  count_events.py  find_first_events.py  test_rpcs.py
scripts/test_rpcs/: check.go  config.go  go.mod  main.go  output.go  rpc.go
