[package]
name = "erc8004-events"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "ERC-8004 raw on-chain event archiver — fetches Identity & Reputation registry logs and stores them as Parquet files."

[dependencies]
alloy.workspace = true
anyhow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
clap.workspace = true
erc8004.workspace = true
parquet.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
