[package]
name = "erc8004"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords = ["ethereum", "erc8004", "ai", "agents", "trustless"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]

[dependencies]
alloy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
